# boost-python-examples

./: .appveyor.yml  .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
01-HelloWorld/: CMakeLists.txt  hello.cpp
02-ExposingClasses/: CMakeLists.txt  classes.cpp  py_classes.py
03-Constructors/: CMakeLists.txt  ctor.cpp  py_ctor.py
04-ClassMembers/: CMakeLists.txt  member.cpp  py_member.py
05-Inheritance/: CMakeLists.txt  inheritance.cpp  py_inheritance.py
06-VirtualFunctionsInPython/: CMakeLists.txt  py_virtual.py  virtual.cpp
07-Operators/: CMakeLists.txt  operators.cpp  py_operators.py
08-CallPolicies/: CMakeLists.txt  policies.cpp  py_policies.py
09-Overloading/: CMakeLists.txt  overload.cpp  py_overload.py
10-Embedding/: CMakeLists.txt  embedding.cpp  my_module.cpp  my_module.hpp
11-Iterators/: CMakeLists.txt  iterators.cpp  py_iterators.py
12-Exceptions/: CMakeLists.txt  my_exceptions.cpp  py_my_exceptions.py
13-AutoInstantiation/: CMakeLists.txt  auto_instance.cpp  my_extension.cpp  my_extension.hpp  py_auto_instance.py
ci/: build.sh  get-nprocessors.sh  install-linux.sh  install-osx.sh
